# 102

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  examples-input.json  examples-result.json  pyproject.toml
backend/: requirements-gpu.txt  requirements.txt
backend/app/: __init__.py  cli.py  domain.py  global_candidates.py  job_store.py  main.py  route2_equiv.py  route3_setcover.py  route_b_rcg.py  route_c_bp.py  route_v4_arcflow.py  service.py  settings.py  shortage.py  solver.py  solver_global.py  verifier.py
backend/tests/: test_accel.py  test_job_store.py  test_route2_equiv.py  test_solver.py  test_solver_global.py  (+1 more)
docs/: SPEC.md  V3_HANDOFF.md  corpus-profile.md  deployment-guide.md  v4-acceptance-report.html  v4-arcflow-implementation-plan.md  段长收敛方案-分级放松.md
frontend-next/: package-lock.json  package.json
scripts/: _ab_constraints.py  _analyze_legacy.py  _arcflow_v3.py  _batch_all.py  _batch_worker.py  _bp_l13legal.py  _bp_probe.py  _bp_solve.py  _build_index.py  _check_v3.py  _colgen_poc.py  _demo_route2_equiv.py  _demo_route3_seqdp.py  _diag_2split.py  _diag_819.py  _diag_819b.py  _diag_819c.py  _diag_alphabet.py  _diag_equiv3.py  _diag_global_alphabet.py  _diag_global_lp.py  _diag_global_smoke.py  _diag_global_strengthen.py  _diag_infeasible.py  _diag_inject_legacy.py  _diag_l4.py  _diag_l9s.py  _diag_legacy_lp.py  _diag_lp_patterns.py  _diag_lv.py  _diag_rem_parts.py  _diag_route2_coverage.py  _e2e_route2.py  _exp_alphabet.py  _exp_colgen.py  _exp_derived_alphabet.py  _exp_ga.py  _exp_ga_batch.py  _exp_ksplit.py  _exp_seggen.py  (+54 more)
(+30 files in other folders)
