[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "serpentine-pipe-nesting"
version = "0.1.0"
description = "Production one-dimensional nesting for boiler serpentine pipe segments"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pyscipopt>=6.2,<7",
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8.3,<10"]

[project.scripts]
serpentine-nest = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
